added two variants of flip cards and added two examples

--- a/index.html
+++ b/index.html
@@ -4,10 +4,48 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="demo/style.css" />
     <title>Flip Card Web Component</title>
   </head>
   <body>
-    <flip-card></flip-card>
+    <div class="container">
+      <h1>Flip Card - On Hover</h1>
+      <flip-card variant="hover" class="trivia-card">
+        <div
+          slot="front"
+          class="trivia-card__details trivia-card__details--front"
+        >
+          <p>What is the capital city of Australia?</p>
+        </div>
+        <div
+          slot="back"
+          class="trivia-card__details trivia-card__details--back"
+        >
+          <p>Canberra</p>
+        </div>
+      </flip-card>
+      <h1>Flip Card - On Click</h1>
+      <flip-card variant="click" class="movie-card">
+        <div
+          slot="front"
+          class="movie-card__details movie-card__details--front"
+        >
+          <div class="movie-card__image">
+            <img src="demo/movie-cover.png" alt="The Wolf Of Wall Street" />
+          </div>
+        </div>
+        <div slot="back" class="movie-card__detail movie-card__details--back">
+          <h2>Actors</h2>
+          <ul>
+            <li>Leonardo DiCaprio</li>
+            <li>Jonah Hill</li>
+            <li>Margot Robbie</li>
+            <li>Matthew McConaughey</li>
+            <li>Kyle Chandler</li>
+          </ul>
+        </div>
+      </flip-card>
+    </div>
     <script src="dist/main.js"></script>
   </body>
 </html>
