--- a/src/template.html
+++ b/src/template.html
@@ -1,1 +1,10 @@
-<div class="flip-card"></div>
+<div class="flip-card">
+  <div class="flip-card__side flip-card__side--front">
+    <div><slot name="front" /></div>
+  </div>
+  <div class="flip-card__side flip-card__side--back">
+    <div>
+      <slot name="back" />
+    </div>
+  </div>
+</div>
